--- a/Pernitateht/Teht4/Teht4.csproj
+++ b/Pernitateht/Teht4/Teht4.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs" />
+    <Compile Include="DVD.cs" />
+    <Compile Include="Esine.cs" />
+    <Compile Include="NintendoDS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
