--- a/Pernitateht/Teht5/Teht5.csproj
+++ b/Pernitateht/Teht5/Teht5.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Monitor.cs" />
+    <Compile Include="Mouse.cs" />
+    <Compile Include="Peripherals.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
