--- a/KoosteetjaRajapinta/teht2/teht2.csproj
+++ b/KoosteetjaRajapinta/teht2/teht2.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITransaction.cs" />
+    <Compile Include="PaidWithCard.cs" />
+    <Compile Include="PaidWithCash.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
