--- a/Kokoelmaluokat/teht3/teht3-4.csproj
+++ b/Kokoelmaluokat/teht3/teht3-4.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="PackOfCards.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
