--- a/Staattisetmetodit/Teht3/Teht3.csproj
+++ b/Staattisetmetodit/Teht3/Teht3.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestBed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
